<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/todays_habits"
        android:icon="@drawable/ic_home"
        android:title="Today's Habits" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_time"
        android:title="Timeline" />

    <item
        android:id="@+id/navigation_profile"
        android:title="Profile"
        android:icon="@drawable/ic_person"/>

</menu>