<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timeline.TimelineFragment">


    <ListView
        android:id="@+id/timelineListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp">

    </ListView>

    <TextView
        android:id="@+id/noHabitEventsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YOU HAVE NO HABIT EVENTS"
        android:textAlignment="center"
        android:fontFamily="@font/rubik_light"
        android:textSize="20sp"
        android:visibility="gone"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>